--- a/desafio-front/src/index.css
+++ b/desafio-front/src/index.css
@@ -81,7 +81,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	max-width: 25rem;
-	flex-grow: 1;
+	width: 100%;
 	margin-right: 5rem;
 	margin-bottom: 2rem;
 }
@@ -158,15 +158,13 @@ body {
 
 /* Layout tabela geral do brasileirão */
 .tabela-geral {
-	display: flex;
 	background-color: white;
 	max-width: 50rem;
-	flex: 1;
 }
 
 .tabela-geral table {
 	border-collapse: collapse;
-	width: 100%;
+	flex-grow: 1;
 }
 
 .tabela-geral thead {
@@ -176,19 +174,15 @@ body {
 }
 
 .tabela-geral thead td {
-	padding: 0.2em 0.4em;
+	padding: 0.2em 0.5em;
 }
 
-.tabela-geral thead td > div {
-	display: flex;
-	align-items: center;
-}
-
-.tabela-geral thead td img {
-	margin-left: 0.2em;
+.tabela-geral thead img {
+	margin-left: 2.5px;
+	height: 1em;
 }
 
 .tabela-geral tbody td {
 	text-align: right;
-	padding: 0.25em 0.5em;
+	padding: 0.3em 1em;
 }
