Funcionalidade:  deslogar + edição de placar + atualização de tabelas ao editar um placar + mensagem 'carregando...' ao mudar de rodada

--- a/desafio-front/src/index.css
+++ b/desafio-front/src/index.css
@@ -105,6 +105,14 @@ body {
 	font-weight: bold;
 }
 
+.partidas .carregando {
+	background-color: white;
+	height: 4em;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 .partidas .tabela {
 	background-color: white;
 	display: flex;
