--- a/desafio-front/src/index.css
+++ b/desafio-front/src/index.css
@@ -167,7 +167,7 @@ body {
 	width: 100%;
 }
 
-/* Layout tabela geral do brasileirão */
+/* Layout tabela final do brasileirão */
 .tabela-geral {
 	background-color: white;
 	max-width: 50rem;
